fix bad config highlighting to be better. add catch logic so tabs dont get stuck open when there are fatal errors

--- a/appserver/static/config.css
+++ b/appserver/static/config.css
@@ -514,8 +514,11 @@
 .ceGreeenLine {
 	border-left: 8px solid green;
 }
-.ceOrangeLine {
+.ceDimGreeenLine {
 	border-left: 8px solid rgba(0,128,0,0.5);
+}
+.ceOrangeLine {
+	border-left: 8px solid orange;
 }
 .ce_diff_addition { background-color: rgba(0,255,0,.2); }
 .ce_diff_deletion { background-color: rgba(255,0,0,.2); }
